# Crash-Logging-Watchdog-Recovery-Framework

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.cezerio_dev_esp32c6  sdkconfig.defaults
.b/: project.checksum
.b/cezerio_dev_esp32c6/: CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_project_args  flasher_args.json  idedata.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  ldgen_libraries_pio  memory.ld  project_description.json  sections.ld  x509_crt_bundle.S
.b/cezerio_dev_esp32c6/bootloader/: CMakeCache.txt  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
.b/cezerio_dev_esp32c6/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
.b/cezerio_dev_esp32c6/bootloader/config/: kconfig_menus.json
.b/cezerio_dev_esp32c6/config/: kconfig_menus.json
.b/cezerio_dev_esp32c6/esp-idf/: cmake_install.cmake
.b/cezerio_dev_esp32c6/gdbinit/: gdbinit  symbols
.b/cezerio_dev_esp32c6/toolchain/: asmflags  cxxflags
.github/workflows/: ci.yml
components/CrashRecoveryFramework/: CLI.cpp  CMakeLists.txt  CrashDatabase.cpp  CrashDetection.cpp  Dashboard.cpp  Logger.cpp  Notification.cpp  RecoveryEngine.cpp  ResourceMonitor.cpp  StackTrace.cpp  StateCheckpoint.cpp  Watchdog.cpp
components/CrashRecoveryFramework/include/: CrashRecoveryFramework.hpp
components/cjson/: CMakeLists.txt
include/: README  sdkconfig.h
src/: main.cpp
(+588 files in other folders)
